popular choice, new items added, offer area

--- a/Pages/index.html
+++ b/Pages/index.html
@@ -8,7 +8,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
     />
-    <title>Resturant</title>
+    <title>Falguni'sCake</title>
   </head>
   <body>
     <!-- navbar -->
@@ -58,7 +58,7 @@
 
     <!-- /* section to --popular choice */ -->
 
-    <section class="sec2">
+    <section class="sec3">
       <h1>Popular Dishes</h1>
       <div class="cards">
         <!-- 1 -->
@@ -96,6 +96,41 @@
               made chocolates.
             </p>
             <span>BDT: 450.00</span>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!--sec4 new  dishes -->
+    <section class="sec4">
+      <h1>New Items</h1>
+      <div class="video-container">
+        <video autoplay muted loop playsinline id="background-video">
+          <source
+            src="../Images/Green And White Modern Delicious Pizza Facebook Ad.mp4"
+            type="video/mp4"
+          />
+          Your browser does not support the video tag.
+        </video>
+      </div>
+    </section>
+
+    <!-- newsletter div -->
+    <section class="sec5">
+      <div class="newsletter">
+        <div class="image">
+          <img
+            src="../Images/Beige Black Minimalist Cake Product Promotion Poster (1).png"
+            alt=""
+          />
+        </div>
+
+        <div class="content">
+          <h2>Newsletter</h2>
+          <h1>SubsCribe for offer Updates</h1>
+          <div class="subscribe">
+            <input type="email" placeholder="Enter Your Email" />
+            <button type="submit">Subscribe</button>
           </div>
         </div>
       </div>
