--- a/Pages/index.html
+++ b/Pages/index.html
@@ -119,10 +119,7 @@
     <section class="sec5">
       <div class="newsletter">
         <div class="image">
-          <img
-            src="../Images/Beige Black Minimalist Cake Product Promotion Poster (1).png"
-            alt=""
-          />
+          <img src="../Images/cakeOffer.png" alt="" />
         </div>
 
         <div class="content">
