--- a/Pages/index.html
+++ b/Pages/index.html
@@ -115,7 +115,7 @@
       </div>
     </section>
 
-    <!-- newsletter div -->
+    <!--sec5 newsletter div -->
     <section class="sec5">
       <div class="newsletter">
         <div class="image">
@@ -131,6 +131,69 @@
           </div>
         </div>
       </div>
+    </section>
+
+    <!-- footer div sec6 -->
+    <section class="sec6">
+      <div>
+        <img src="../Images/logo.jpg" alt="" />
+        <p>
+          Home baked cakes are so tasty, healthy,safe and fresh.<br />
+          <!-- Falguni Home baked bakery delivers variety of cakes <br />
+          with varieties of flavour in students budget. -->
+        </p>
+      </div>
+
+      <div>
+        <ul>
+          <li>Main Menu</li>
+
+          <li>
+            <a href="#">Home</a>
+          </li>
+          <li>
+            <a href="#">Menu</a>
+          </li>
+          <li>
+            <a href="#">Events</a>
+          </li>
+          <li>
+            <a href="#">Offers</a>
+          </li>
+        </ul>
+      </div>
+
+      <div>
+        <ul>
+          <li>Information</li>
+
+          <li>
+            <a href="#">Contacts</a>
+          </li>
+          <li>
+            <a href="#">Orders & Returns</a>
+          </li>
+          <li>
+            <a href="#">Reservation</a>
+          </li>
+          <li>
+            <a href="#">Vedios</a>
+          </li>
+        </ul>
+      </div>
+
+      <div>
+        <ul>
+          <li>Address</li>
+          <p>Sylhet, Bangladesh</p>
+          <p>10.30 am- 6.00pm</p>
+        </ul>
+      </div>
+    </section>
+
+    <!-- footer last -->
+    <section class="footer">
+      <p>Copyright &copy; FalguniBaking || All rights reserved.</p>
     </section>
   </body>
 </html>
