--- a/Pages/index.html
+++ b/Pages/index.html
@@ -45,18 +45,55 @@
         <p>
           Home baked cakes are so tasty, healthy,safe and fresh.<br />
           This bakery delivers variety of cakes with varieties of <br />
-          flavour in students budget.You can check the blog area <br />for more
-          details.
+          flavour in students budget.
         </p>
         <a href="#" class="btn"> ORDER NOW !</a>
       </div>
+    </section>
 
-      <div class="img1">
-        <img src="" alt="" />
+    <!-- section2 about us -->
+    <section class="sec2">
+      <h1>About Us</h1>
+      <div class="About">
+        <div class="Acontent">
+          <h2>We Provide Healthy Home Baked Cake</h2>
+          <ul>
+            <li>1.Our Services</li>
+            <li>2.Cooking Process</li>
+            <li>3.Cakes Order System</li>
+            <li>4.Delivery System</li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="service-img">
+        <div class="service-cardbox">
+          <div class="service-card">
+            <img src="../Images/A1.png" alt="" />
+          </div>
+        </div>
+
+        <div class="service-cardbox">
+          <div class="service-card">
+            <img src="../Images/A2.png" alt="" />
+          </div>
+        </div>
+
+        <div class="service-cardbox">
+          <div class="service-card">
+            <img src="../Images/A3.png" alt="" />
+          </div>
+        </div>
+
+        <div class="service-cardbox">
+          <div class="service-card">
+            <img src="../Images/A4 (2).png" alt="" />
+          </div>
+        </div>
       </div>
     </section>
 
-    <!-- /* section to --popular choice */ -->
+    <!-- /* section3 to --popular choice */ -->
 
     <section class="sec3">
       <h1>Popular Dishes</h1>
