Menu page added

--- a/Pages/index.html
+++ b/Pages/index.html
@@ -14,8 +14,8 @@
     <!-- navbar -->
     <nav>
       <div class="NAV-part-1">
-        <a href="#">Home</a>
-        <a href="#">Menu</a>
+        <a href="./index.html">Home</a>
+        <a href="./Menu.html">Menu</a>
         <a href="#">Reservation</a>
       </div>
       <div class="Nav-logo">
