reservation page added

--- a/Pages/Menu.html
+++ b/Pages/Menu.html
@@ -16,7 +16,7 @@
       <div class="NAV-part-1">
         <a href="./index.html">Home</a>
         <a href="./Menu.html">Menu</a>
-        <a href="#">Reservation</a>
+        <a href="./Reservation.html">Reservation</a>
       </div>
       <div class="Nav-logo">
         <img src="../Images/logo.jpg" alt="logo" />
@@ -47,35 +47,72 @@
         <!-- 1 -->
         <div class="menu-card">
           <img src="../Images/B1-removebg-preview.png" alt="" />
-          <h4>dish name</h4>
+          <h4>Vanila Toppings</h4>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias
-            aliquid fugit esse doloribus accusamus tempore perspiciatis, quas
-            possimus ad, numquam molestias maiores, quidem iusto.
+            It's a Customised order option cake.It's a vanila flavour cake with
+            lots of toppings and fundent .
           </p>
-          <span>BDT:250Tk</span>
+          <p>Minimum order 1 pound</p>
+          <span>BDT:350Tk</span>
         </div>
         <!-- 2 -->
         <div class="menu-card">
           <img src="../Images/b2.png" alt="" />
-          <h4>dish name</h4>
+          <h4>Coffee Chocolate</h4>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias
-            aliquid fugit esse doloribus accusamus tempore perspiciatis, quas
-            possimus ad, numquam molestias maiores, quidem iusto.
+            It's a Regular order option cake.It's a Coffee Chocolate flavour
+            cake with springles.
           </p>
-          <span>BDT:250Tk</span>
+          <p>Minimum order 1 pound</p>
+          <span>BDT:300Tk</span>
         </div>
         <!-- 3 -->
         <div class="menu-card">
           <img src="../Images/b3.png" alt="" />
-          <h4>dish name</h4>
+          <h4>Choco Vanila</h4>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias
-            aliquid fugit esse doloribus accusamus tempore perspiciatis, quas
-            possimus ad, numquam molestias maiores, quidem iusto.
+            Choco Vanila is a customised order option cake.It has Chocolate ,
+            vanila both flavour and berrys on top.
           </p>
-          <span>BDT:250Tk</span>
+          <p>Minimum order 1 pound</p>
+          <span>BDT:450Tk</span>
+        </div>
+
+        <!-- 4 -->
+        <div class="menu-card">
+          <img src="../Images/vanilla-flavoured-birthday-cakeb4.webp" alt="" />
+          <h4>ButterScotch</h4>
+          <p>
+            ButterScotch is regular cake in our shop. You will find vanila
+            flavour moist cake and here used cream is in butterscotch flavour.
+          </p>
+          <p>Minimum order 2 pound</p>
+          <span>BDT:350Tk</span>
+        </div>
+
+        <!-- 5-->
+        <div class="menu-card">
+          <img src="../Images/b5-removebg-preview.png" alt="" />
+          <h4>Milky Coffee</h4>
+          <p>
+            Milky Coffee is regular cake in our shop. You will find coffee
+            flavour cake and milky cream on top with tutty-futty.
+          </p>
+          <p>Minimum order 1 pound</p>
+          <span>BDT:200Tk</span>
+        </div>
+
+        <!-- 6-->
+        <div class="menu-card">
+          <img src="../Images/b6-removebg-preview.png" alt="" />
+          <h4>Pookie Queen</h4>
+          <p>
+            Pookie Queen is customised cake in our shop. You will find coffee
+            flavour cake covered with two colour cream made from fruit and Girl
+            Fundent theme on top.
+          </p>
+          <p>Minimum order 1 pound</p>
+          <span>BDT:350Tk</span>
         </div>
       </div>
 
@@ -84,74 +121,140 @@
       <div class="menu-box">
         <!-- 1 -->
         <div class="menu-card">
-          <img src="../Images/m.webp" alt="" />
-          <h4>dish name</h4>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias
-            aliquid fugit esse doloribus accusamus tempore perspiciatis, quas
-            possimus ad, numquam molestias maiores, quidem iusto.
-          </p>
-          <span>BDT:250Tk</span>
+          <img
+            src="../Images/Coffee-Cake-Muffins1-removebg-preview.png"
+            alt=""
+          />
+          <h4>Coffee Muffin Cake</h4>
+          <p>Coffee Muffin Cake has coffee flavour with nuts.</p>
+          <p>Minimum order 6 piece</p>
+          <span>BDT:120Tk</span>
         </div>
         <!-- 2 -->
         <div class="menu-card">
           <img src="../Images/m2-removebg-preview.png" alt="" />
-          <h4>dish name</h4>
+          <h4>Chocolate Muffin Cake</h4>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias
-            aliquid fugit esse doloribus accusamus tempore perspiciatis, quas
-            possimus ad, numquam molestias maiores, quidem iusto.
+            This is a chocolate flavourand choco gurnish with cream muffin cake.
           </p>
-          <span>BDT:250Tk</span>
+          <p>Minimum order 6 piece</p>
+          <span>BDT:200Tk</span>
         </div>
+
         <!-- 3 -->
         <div class="menu-card">
           <img src="../Images/m3.jpg" alt="" />
-          <h4>dish name</h4>
+          <h4>Strawberry Muffin Cake</h4>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias
-            aliquid fugit esse doloribus accusamus tempore perspiciatis, quas
-            possimus ad, numquam molestias maiores, quidem iusto.
+            This is a fruit flavoured muffin cake.You can add any seasonal
+            fruit.
           </p>
+          <p>Minimum order 6 piece</p>
           <span>BDT:250Tk</span>
+        </div>
+
+        <!-- 4 -->
+        <div class="menu-card">
+          <img src="../Images/m4-removebg-preview.png" alt="" />
+          <h4>Coffee Vanila Muffin Cake</h4>
+          <p>Coffee flavour muffin cake Vanila icecream .</p>
+          <p>Minimum order 6 piece</p>
+          <span>BDT:250Tk</span>
+        </div>
+
+        <!-- 5-->
+        <div class="menu-card">
+          <img src="../Images/m5-removebg-preview.png" alt="" />
+          <h4>Butterscotch</h4>
+          <p>
+            This customised ones Flavour - coffee $ chocolate flavour & has
+            butterscotch , melt chocolate both cream.
+          </p>
+          <p>Minimum order 12 piece</p>
+          <span>BDT:750Tk</span>
+        </div>
+
+        <!-- 6 -->
+        <div class="menu-card">
+          <img src="../Images/mm6-removebg-preview.png" alt="" />
+          <h4>Muffin Platter</h4>
+          <p>
+            This is a special kind of plater for our Customers. You can add
+            diffrent flavour muffin cake in any number from above.
+          </p>
+          <p>Minimum order 6 piece</p>
+          <span>BDT:650Tk</span>
         </div>
       </div>
 
       <!-- Weedingcake section -->
-      <h2>Ceremony Cake</h2>
+      <h2>Customised Ceremony Cake</h2>
       <div class="menu-box">
         <!-- 1 -->
         <div class="menu-card">
           <img src="../Images/c1-removebg-preview.png" alt="" />
-          <h4>dish name</h4>
+          <h4>Bengal Ceremony</h4>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias
-            aliquid fugit esse doloribus accusamus tempore perspiciatis, quas
-            possimus ad, numquam molestias maiores, quidem iusto.
+            Vanila Flavour cake with differnt types toppings.Theme is in Bengal
+            ceremony.
           </p>
-          <span>BDT:250Tk</span>
+          <p>Minimum order 1.5 Pound</p>
+          <span>BDT:750Tk</span>
         </div>
         <!-- 2 -->
         <div class="menu-card">
           <img src="../Images/c2.webp" alt="" />
-          <h4>dish name</h4>
+          <h4>Ring Ceremony</h4>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias
-            aliquid fugit esse doloribus accusamus tempore perspiciatis, quas
-            possimus ad, numquam molestias maiores, quidem iusto.
+            Chocolate flavour and butterscotch cream used for this Engagement
+            ceremony cake.
           </p>
-          <span>BDT:250Tk</span>
+          <p>Minimum order 2 Pound</p>
+          <span>BDT:850Tk</span>
         </div>
         <!-- 3 -->
         <div class="menu-card">
           <img src="../Images/c3-removebg-preview.png" alt="" />
-          <h4>dish name</h4>
+          <h4>Wedding Cake</h4>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias
-            aliquid fugit esse doloribus accusamus tempore perspiciatis, quas
-            possimus ad, numquam molestias maiores, quidem iusto.
+            Strawberry flavour special cake for wedding with vanila cream.Roses
+            are chocolate made and eadible.
           </p>
-          <span>BDT:250Tk</span>
+          <p>Minimum order 2.5 Pound</p>
+          <span>BDT:1250Tk</span>
+        </div>
+
+        <!-- 4 -->
+        <div class="menu-card">
+          <img src="../Images/c4-removebg-preview.png" alt="" />
+          <h4>Couple Cake</h4>
+          <p>
+            This is for wedding anniversary / Engagement. You can choose flavour
+            for this cake.
+          </p>
+          <p>Minimum order 2 Pound</p>
+          <span>BDT:1050Tk</span>
+        </div>
+
+        <!-- 5 -->
+        <div class="menu-card">
+          <img src="../Images/c5-removebg-preview.png" alt="" />
+          <h4>Bengal Ceremony</h4>
+          <p>
+            It is for pre-wedding ceremony.Vanila flavour and decore with
+            choco-rose patels with bengle fundent.
+          </p>
+          <p>Minimum order 1.5 Pound</p>
+          <span>BDT:1250Tk</span>
+        </div>
+
+        <!-- 6 -->
+        <div class="menu-card">
+          <img src="../Images/c6_-removebg-preview.png" alt="" />
+          <h4>Mehendi Cake</h4>
+          <p>Also a pre-wedding cake.Vanila lemon flavour with lemon cream.</p>
+          <p>Minimum order 1.5 Pound</p>
+          <span>BDT:650Tk</span>
         </div>
       </div>
 
@@ -161,36 +264,72 @@
       <div class="menu-box">
         <!-- 1 -->
         <div class="menu-card">
-          <img src="../Images/m.webp" alt="" />
-          <h4>dish name</h4>
+          <img src="../Images/r1.webp" alt="" />
+          <h4>Coffee Cake</h4>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias
-            aliquid fugit esse doloribus accusamus tempore perspiciatis, quas
-            possimus ad, numquam molestias maiores, quidem iusto.
+            A coffee flavour moist cake.Used chocolate chips for gurnish and has
+            chocolate cream on top.
           </p>
-          <span>BDT:250Tk</span>
+          <p>Minimum order 1 Pound</p>
+          <span>BDT:450Tk</span>
         </div>
         <!-- 2 -->
         <div class="menu-card">
-          <img src="../Images/m2-removebg-preview.png" alt="" />
-          <h4>dish name</h4>
+          <img src="../Images/R2-removebg-preview.png" alt="" />
+          <h4>Chocolate Cake</h4>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias
-            aliquid fugit esse doloribus accusamus tempore perspiciatis, quas
-            possimus ad, numquam molestias maiores, quidem iusto.
+            Flavour-Melt chocolate flavour ,gurnish with also melt chocolate and
+            have eadible chocolate outside .
           </p>
-          <span>BDT:250Tk</span>
+          <p>Minimum order 1.5 Pound</p>
+          <span>BDT:650Tk</span>
         </div>
         <!-- 3 -->
         <div class="menu-card">
-          <img src="../Images/m3.jpg" alt="" />
-          <h4>dish name</h4>
+          <img src="../Images/r3-removebg-preview.png" alt="" />
+          <h4>ChocoCoffee</h4>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias
-            aliquid fugit esse doloribus accusamus tempore perspiciatis, quas
-            possimus ad, numquam molestias maiores, quidem iusto.
+            Flavour-Coffee flavour inside ,gurnish with melt chocolate and have
+            choco chips outside .
           </p>
+          <p>Minimum order 1.5 Pound</p>
+          <span>BDT:550Tk</span>
+        </div>
+
+        <!-- 4 -->
+        <div class="menu-card">
+          <img src="../Images/r4-removebg-preview.png" alt="" />
+          <h4>Vanila Lemon</h4>
+          <p>
+            Lemon flavoured cake with vanila cream for outside.It has 3 layer of
+            fresh lemon flavor covered by vanila cream.
+          </p>
+          <p>Minimum order 1.5 Pound</p>
+          <span>BDT:400Tk</span>
+        </div>
+        <!-- 5 -->
+        <div class="menu-card">
+          <img src="../Images/r5-removebg-preview.png" alt="" />
+          <h4>ButterScotch</h4>
+          <p>
+            Vanila flavoured cake with ButterScotch cream .It has 3 layer of
+            vanila covered by ButterScotch cream & springles.
+          </p>
+          <p>Minimum order 1.5 Pound</p>
           <span>BDT:250Tk</span>
+        </div>
+
+        <!-- 6 -->
+
+        <div class="menu-card">
+          <img src="../Images/r6-removebg-preview.png" alt="" />
+          <h4>Orange Cake</h4>
+          <p>
+            Fresh orange flavoured cake without any cream .It has 2 layer height
+            orange cake,don't use any toppings/springles.
+          </p>
+          <p>Minimum order 1.5 Pound</p>
+          <span>BDT:550Tk</span>
         </div>
       </div>
     </section>
