Booking apge half Complete

--- a/Pages/Reservation.html
+++ b/Pages/Reservation.html
@@ -16,7 +16,7 @@
       <div class="NAV-part-1">
         <a href="./index.html">Home</a>
         <a href="./Menu.html">Menu</a>
-        <a href="./Reservation.html">Reservation</a>
+        <a href="./Reservation.html">Booking</a>
       </div>
       <div class="Nav-logo">
         <img src="../Images/logo.jpg" alt="logo" />
@@ -36,6 +36,34 @@
         </div>
       </div>
     </nav>
+
+    <!-- Booking -->
+
+    <section class="booking-container">
+      <div class="booking">
+        <form>
+          <h2>Your Booking</h2>
+
+          <div>
+            <input type="text" placeholder="Your Name" />
+            <input type="email" placeholder="Your Email" />
+          </div>
+
+          <div>
+            <input type="date" placeholder="Choose Date" />
+            <input type="time" placeholder="Choose Time" />
+          </div>
+
+          <div>
+            <textarea
+              placeholder="Your Requierment"
+              cols="30"
+              rows="7"
+            ></textarea>
+          </div>
+        </form>
+      </div>
+    </section>
 
     <!-- footer div sec6 -->
     <section class="sec6">
