--- a/Pages/Menu.html
+++ b/Pages/Menu.html
@@ -16,7 +16,7 @@
       <div class="NAV-part-1">
         <a href="./index.html">Home</a>
         <a href="./Menu.html">Menu</a>
-        <a href="./Reservation.html">Reservation</a>
+        <a href="./Reservation.html">Booking</a>
       </div>
       <div class="Nav-logo">
         <img src="../Images/logo.jpg" alt="logo" />
