login page complete

--- a/Pages/Reservation.html
+++ b/Pages/Reservation.html
@@ -29,7 +29,7 @@
           <i class="fa-solid fa-magnifying-glass"></i>
         </div>
         <div class="user">
-          <a href="#">
+          <a href="Login.html">
             <i class="fa-solid fa-user"></i>
             <span class="user-text">User</span>
           </a>
@@ -60,6 +60,10 @@
               cols="30"
               rows="7"
             ></textarea>
+          </div>
+
+          <div>
+            <a href="#" class="btn">ORDER NOW !</a>
           </div>
         </form>
       </div>
