--- a/Pages/index.html
+++ b/Pages/index.html
@@ -11,45 +11,48 @@
     <title>Falguni'sCake</title>
   </head>
   <body>
-    <!-- navbar -->
-    <nav>
-      <div class="NAV-part-1">
-        <a href="./index.html">Home</a>
-        <a href="./Menu.html">Menu</a>
-        <a href="./Reservation.html">Booking</a>
-      </div>
-      <div class="Nav-logo">
-        <img src="../Images/logo.jpg" alt="logo" />
-      </div>
-
-      <div class="Nav-part-2">
-        <div class="search">
-          <input type="text" placeholder="Search Here" />
-
-          <i class="fa-solid fa-magnifying-glass"></i>
+    <div class="bgimg">
+      <!-- navbar -->
+      <nav>
+        <div class="NAV-part-1">
+          <a href="./index.html">Home</a>
+          <a href="./Menu.html">Menu</a>
+          <a href="./Reservation.html">Booking</a>
         </div>
-        <div class="user">
-          <a href="#">
-            <i class="fa-solid fa-user"></i>
-            <span class="user-text">User</span>
-          </a>
+        <div class="Nav-logo">
+          <img src="../Images/logo.jpg" alt="logo" />
         </div>
-      </div>
-    </nav>
 
-    <!-- section-homepage -->
+        <div class="Nav-part-2">
+          <div class="search">
+            <input type="text" placeholder="Search Here" />
 
-    <section class="sec1">
-      <div class="content-homepage">
-        <h1 class="content-text">Enjoy Delicious Home Baked Cake !!</h1>
-        <p>
-          Home baked cakes are so tasty, healthy,safe and fresh.<br />
-          This bakery delivers variety of cakes with varieties of <br />
-          flavour in students budget.
-        </p>
-        <a href="#" class="btn"> ORDER NOW !</a>
-      </div>
-    </section>
+            <i class="fa-solid fa-magnifying-glass"></i>
+          </div>
+          <div class="user">
+            <a href="./Login.html">
+              <i class="fa-solid fa-user"></i>
+              <span class="user-text">User</span>
+            </a>
+          </div>
+        </div>
+      </nav>
+
+      <!-- section-homepage -->
+
+      <section class="sec1">
+        <div class="content-homepage">
+          <h1 class="content-text">Enjoy Delicious Home Baked Cake !!</h1>
+          <p>
+            Home baked cakes are the combination of fresh and safe ingridients.
+            Our bakery delivers variety of cakes with varieties of flavour in
+            students budget.We also take customised cake for our selected type
+            functions.
+          </p>
+          <a href="#" class="btn"> ORDER NOW !</a>
+        </div>
+      </section>
+    </div>
 
     <!-- section2 about us -->
     <section class="sec2">
