--- a/Pages/Menu.html
+++ b/Pages/Menu.html
@@ -29,7 +29,7 @@
           <i class="fa-solid fa-magnifying-glass"></i>
         </div>
         <div class="user">
-          <a href="#">
+          <a href="Login.html">
             <i class="fa-solid fa-user"></i>
             <span class="user-text">User</span>
           </a>
