login, signup and 2 extra section added on home page

--- a/Pages/Login.html
+++ b/Pages/Login.html
@@ -49,7 +49,10 @@
           <input type="password" placeholder="your password" />
           <p class="forgot">Forgot password?</p>
           <a href="#" class="btn">Login</a>
-          <p class="signup">Don't have an account? <span>SignUP</span></p>
+          <p class="signup">
+            Don't have an account?
+            <span> <a href="./SignUp.html"> SignUP</a></span>
+          </p>
         </form>
       </div>
     </section>
